--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                 <div class="benefits__heading">
                     <img src="./img/section5_think.png" alt="think about it" class="benefits__img">
                     <h2 class="section-title benefits__title">
-                        Экономь в&nbsp;3&nbsp;раза&nbsp;больше и&nbsp;в&nbsp;4&nbsp;раза&nbsp;быстрее укладывай плитку
+                        Экономь в&nbsp;3&nbsp;раза больше и в&nbsp;4&nbsp;раза быстрее укладывай плитку
                     </h2>
                 </div>
                 <div class="benefits__table">
@@ -488,7 +488,7 @@
                     <img src="./img/section6_img.png" alt="RotorFix" class="photos__img">
                     <div class="photos__heading">
                         <h2 class="section-title photos__title">
-                            Мастера прислали уже&nbsp;сотни своих&nbsp;отзывов
+                            Мастера прислали уже&nbsp;сотни своих отзывов
                         </h2>
                     </div>
                     <div class="photos__customer customer">
@@ -554,7 +554,7 @@
                             <div class="swiper-slide video white-block">
                                 <div class="video__text fw600">
                                     &#34;Я в восторге! Никаких доп. инструментов,
-                                    уложил в&nbsp;4&nbsp;раза&nbsp;быстрее, ровное натяжение
+                                    уложил в&nbsp;4&nbsp;раза быстрее, ровное натяжение
                                     сразу&nbsp;4&nbsp;плиток&#34;
                                 </div>
                                 <div class="video__img">
