--- a/wholesalers.html
+++ b/wholesalers.html
@@ -634,7 +634,7 @@
                             <div class="swiper-slide video white-block">
                                 <div class="video__text fw600">
                                     &#34;Я в восторге! Никаких доп. инструментов,
-                                    уложил в&nbsp;4&nbsp;раза&nbsp;быстрее, ровное натяжение
+                                    уложил в&nbsp;4&nbsp;раза быстрее, ровное натяжение
                                     сразу&nbsp;4&nbsp;плиток&#34;
                                 </div>
                                 <div class="video__img">
