--- a/contacts.html
+++ b/contacts.html
@@ -18,7 +18,9 @@
         <section class="main" id="main">
             <div class="container header__container">
                 <div class="logo header__logo">
-                    <img src="./img/logo.png" alt="Лого" class="logo__img">
+                    <a href="./index.html">
+                        <img src="./img/logo.png" alt="Лого" class="logo__img">
+                    </a>  
                     <div class="logo__text fs11 fw600 lh14">
                         Экспертные решения для укладки плитки
                     </div>
