--- a/dealer.html
+++ b/dealer.html
@@ -89,7 +89,7 @@
                     право продажи в вашем регионе
                 </div>
                 <div class="main__shopping shopping">
-                    <a class="btn btn-blue shopping__ozon  fs16 fw600 lh17" href="https://www.ozon.ru/" role="button">
+                    <a class="btn btn-blue shopping__ozon  fs16 fw600 lh17" href="#" role="button">
                         Получить условия дилерства
                         <svg width="18" height="12" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
