--- a/wholesalers.html
+++ b/wholesalers.html
@@ -569,11 +569,11 @@
                                     <div class="range__slider-line" id="range-line-marginality"></div>
                                 </div>
                                 <div class="range__thumb" id="range-thumb-marginality"></div>
-                                <input type="range" class="range__input" id="range-input-marginality" min="0" max="100"
+                                <input type="range" class="range__input" id="range-input-marginality" min="0" max="200"
                                     value="60" step="1">
                                 <div class="range__hint hint">
                                     <p class="hint__min fs17 fw600">
-                                        100%
+                                        50%
                                     </p>
                                     <p class="hint__title fs17 fw600">
                                         Задайте маржинальность,&nbsp;%
@@ -589,7 +589,7 @@
                                 Ваша маржинальная прибыль:
                             </div>
                             <div class="cash__money fs50 fw700 lh70">
-                                670 000 руб.
+                                11880 руб.
                             </div>
                         </div>
                     </div>
